<resources>
    <string name="app_name">XG Buddy</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_midi_detected">No MIDI devices detected.\nConnect a MIDI device to get started.</string>
    <string name="dialog_done">Done</string>
    <string name="available_devices">Available Devices</string>
    <string name="save">Save</string>
    <string name="clear_data">Clear Data</string>
    <string name="save_preset_as">Save Preset As…</string>
    <string name="qs_cap_ready">Ready to receive data</string>
    <string name="qs_cap_no_output">No valid output device detected</string>
    <string name="qs_cap_complete">Valid preset detected! Enter a name and click "Save Preset"</string>
    <string name="qs_cap_capturing">Receiving data</string>
    <string name="import_qs300_presets">Import QS300 Presets</string>
    <string name="file_browser_invalid_dir">%1$s is either empty or an invalid directory.</string>
    <string name="new_xg_setup">New XG Setup</string>
    <string name="new_qs300_setup">New QS300 Setup</string>
    <string name="open_existing">Open Existing Setup (.xbx/.xbq)</string>
    <string name="xgbuddy_files">XGBuddy Files</string>
    <string name="xgnv_grand_pno">GrandPno</string>
    <string name="xgnv_grand_pno_k">GRND_PNO_K</string>
    <string name="xgnv_mello_grp">MELLO_GR_P</string>
    <string name="xgnv_piano_str">PIANO_STR</string>
    <string name="xgnv_dream">DREAM</string>
    <string name="xgnv_brite_pno">BRITE_PNO</string>
    <string name="xgnv_brite_pno_k">BRIT_PNO_K</string>
    <string name="xgnv_ele_grand">E_GRAND_K</string>
    <string name="xgnv_ele_grand_k">EL_GRND_PN_K</string>
    <string name="xgnv_det_cp80">DET_CP80 </string>
    <string name="xgnv_elec_grp_1">EL_GR_PNO_1</string>
    <string name="xgnv_elec_grp_2">EL_GR_PNO_2</string>
    <string name="xgnv_hnky_tnk">HNKY_TNK </string>
    <string name="xgnv_hnky_tnk_k">HNKY_TNK_K</string>
    <string name="xgnv_ele_piano_1">EL_PIANO_1</string>
    <string name="xgnv_ele_piano_1k">EL_PIANO_1_K</string>
    <string name="xgnv_mello_ep1">MELLO_EP_1</string>
    <string name="xgnv_chor_ep1">CHOR_EP_1</string>
    <string name="xgnv_hard_ep1">HARD_EL_P</string>
    <string name="xgnv_vx_ep1">VX_EL_P_1</string>
    <string name="xgnv_sixties_ep1">SIXTIES_EL_P1</string>
    <string name="xgnv_el_piano_2">EL_PIANO_2</string>
    <string name="xgnv_el_piano_2_k">EL_PIANO_2_K</string>
    <string name="xgnv_chor_ep2">CHOR_EP_2</string>
    <string name="xgnv_dx_hard">DX_HARD</string>
    <string name="xgnv_dx_legend">DX_LEGEND</string>
    <string name="xgnv_dx_phase">DX_PHASE</string>
    <string name="xgnv_dx_ana">DX_ANALOG</string>
    <string name="xgnv_dx_koto_ep">DX_KOTO_EP</string>
    <string name="xgnv_vx_ep2">VX_EL_P2</string>
    <string name="xgnv_harpsi">HARPSI</string>
    <string name="xgnv_harpsi_k">HARPSI_K</string>
    <string name="xgnv_harpsi2">HARPSI_2</string>
    <string name="xgnv_harpsi3">HARPSI_3</string>
    <string name="xgnv_clavi">CLAVI</string>
    <string name="xgnv_clavi_k">CLAVI_K</string>
    <string name="xgnv_clavi_wah">CLAVI_WAH</string>
    <string name="xgnv_pulse_clav">PULSE_CLAV</string>
    <string name="xgnv_pierce_clav">PIERCE_CLAV</string>
    <string name="xgnv_celesta">CELESTA</string>
    <string name="xgnv_glocken">Glocken</string>
    <string name="xgnv_music_box">MusicBox</string>
    <string name="xgnv_orgel">Orgel</string>
    <string name="xgnv_vibes">Vibes</string>
    <string name="xgnv_vibes_k">VibesK</string>
    <string name="xgnv_hard_vibes">HardVibe</string>
    <string name="xgnv_marimba">Marimba</string>
    <string name="xgnv_marimba_k">MarimbaK</string>
    <string name="xgnv_sine_marimba">SineMrmb</string>
    <string name="xgnv_balafon2">Balafon2</string>
    <string name="xgnv_log_drum">Log_Drum</string>
    <string name="xgnv_xylophon">Xylophon</string>
    <string name="xgnv_tubul_bel">TubulBel</string>
    <string name="xgnv_church_bel">ChrchBel</string>
    <string name="xgnv_carillon">Carillon</string>
    <string name="xgnv_dulcimer">Dulcimer</string>
    <string name="xgnv_dulcimer2">Dulcimr2</string>
    <string name="xgnv_cimbalom">Cimbalom</string>
    <string name="xgnv_santur">Santur</string>
    <string name="xgnv_draw_orgn">DrawOrgn</string>
    <string name="xgnv_det_draw_orgn">DetDrwOr</string>
    <string name="xgnv_sixties_dr_or1">SIXTIESsDrOr1</string>
    <string name="xgnv_sixties_dr_or2">SIXTIESDrOr2</string>
    <string name="xgnv_seventies_dr_or1">SEVENTIESDrOr1</string>
    <string name="xgnv_draw_or2">DrawOrg2</string>
    <string name="xgnv_sixties_dr_or3">SIXTIESDrOr3</string>
    <string name="xgnv_even_bar">EvenBar</string>
    <string name="xgnv_sixteen_223">SIXTEEN_TWO_TWO_T</string>
    <string name="xgnv_organ_ba">Organ_B</string>
    <string name="xgnv_seventies_dr_or2">SEVENTIEsDrOr2</string>
    <string name="xgnv_cheez_org">CheezOrg</string>
    <string name="xgnv_draw_org3">DrawOrg3</string>
    <string name="xgnv_perc_orgn">PercOrgn</string>
    <string name="xgnv_seventies_pc_or1">SEVENTIEsPcOr1</string>
    <string name="xgnv_det_prc_org">DetPrcOr</string>
    <string name="xgnv_lite_org">LiteOrg</string>
    <string name="xgnv_perc_org2">PercOrg2</string>
    <string name="xgnv_rock_org">RockOrgn</string>
    <string name="xgnv_rotary_org">RotaryOr</string>
    <string name="xgnv_slo_rotary">SloRotar</string>
    <string name="xgnv_fast_rotary">FstRotar</string>
    <string name="xgnv_church_org">ChrchOrg</string>
    <string name="xgnv_church_org3">ChurOrg3</string>
    <string name="xgnv_church_org2">ChurOrg2</string>
    <string name="xgnv_notre_dam">NotreDam</string>
    <string name="xgnv_org_flute">OrgFlute</string>
    <string name="xgnv_trm_org_fl">TrmOrgFl</string>
    <string name="xgnv_reed_org">ReedOrg</string>
    <string name="xgnv_puff_org">Puff_Org</string>
    <string name="xgnv_accordion">Acordion</string>
    <string name="xgnv_accord_it">AccordIt</string>
    <string name="xgnv_harmonica">Harmnica</string>
    <string name="xgnv_harmo_2">Harmo_2</string>
    <string name="xgnv_tango_ad">TangoAcd</string>
    <string name="xgnv_tango_ad2">TngoAcd2</string>
    <string name="xgnv_nylon_gtr">NylonGtr</string>
    <string name="xgnv_nylon_gtr2">NylonGt2</string>
    <string name="xgnv_nylon_gtr3">NylonGt3</string>
    <string name="xgnv_velo_gt_hrm">VelGtHrm</string>
    <string name="xgnv_ukulele">Ukulele</string>
    <string name="xgnv_steel_gtr">SteelGtr</string>
    <string name="xgnv_steel_gt2">SteelGt2</string>
    <string name="xgnv_twelve_str">TWELVEStrGtr</string>
    <string name="xgnv_nylon_stl">NylnStl</string>
    <string name="xgnv_stl_body">StlBody</string>
    <string name="xgnv_mandolin">Mandolin</string>
    <string name="xgnv_jazz_gt">Jazz_Gtr</string>
    <string name="xgnv_mello_gt">MelloGtr</string>
    <string name="xgnv_jazz_amp">JazzAmp</string>
    <string name="xgnv_clean_gtr">CleanGtr</string>
    <string name="xgnv_chor_gtr">ChorusGt</string>
    <string name="xgnv_mute_gtr">MuteGtr</string>
    <string name="xgnv_funk_gtr">FunkGtr1</string>
    <string name="xgnv_mute_stl_gtr">MuteStlG</string>
    <string name="xgnv_funk_gtr2">FunkGtr2</string>
    <string name="xgnv_jazz_man">Jazz_Man</string>
    <string name="xgnv_ovrdrive">Ovrdrive</string>
    <string name="xgnv_gt_pinch">GtPinch</string>
    <string name="xgnv_dist_gtr">DistGtr</string>
    <string name="xgnv_feedback_gtr">FeedbkGt</string>
    <string name="xgnv_feedback_gtr2">FeedbGt2</string>
    <string name="xgnv_gtr_harm">GtrHarmo</string>
    <string name="xgnv_gtr_feedback">GtFeedbk</string>
    <string name="xgnv_gtr_harmo2">GtrHrmo2</string>
    <string name="xgnv_aco_bass">AcoBass</string>
    <string name="xgnv_jazz_ryth">JazzRthm</string>
    <string name="xgnv_vx_upright">VXUprght</string>
    <string name="xgnv_finger_bass">FngrBass</string>
    <string name="xgnv_finger_dark">FingrDrk</string>
    <string name="xgnv_flange_bass">FlangeBa</string>
    <string name="xgnv_bass_dst_eg">BaDstEG</string>
    <string name="xgnv_finger_slap">FngrSlap</string>
    <string name="xgnv_finger_bass2">FngBass2</string>
    <string name="xgnv_mod_alem">ModAlem</string>
    <string name="xgnv_pick_bass">PickBass</string>
    <string name="xgnv_mute_pick_bass">MutePkBa</string>
    <string name="xgnv_fretless">Fretless</string>
    <string name="xgnv_fretless2">Fretles2</string>
    <string name="xgnv_fretless3">Fretles3</string>
    <string name="xgnv_fretless4">Fretles4</string>
    <string name="xgnv_syn_fretless">SynFretl</string>
    <string name="xgnv_smooth_bass">Smooth</string>
    <string name="xgnv_slap_1">SlapBas1</string>
    <string name="xgnv_reso_slap">ResoSlap</string>
    <string name="xgnv_punch">PunchThm</string>
    <string name="xgnv_slap2">SlapBas2</string>
    <string name="xgnv_velo_slap">VeloSlap</string>
    <string name="xgnv_syn_bass">SynBass1</string>
    <string name="xgnv_syn_bass1_dk">SynBa1D</string>
    <string name="xgnv_fast_res_bass">FastResB</string>
    <string name="xgnv_acid_bass">AcidBass</string>
    <string name="xgnv_clv_bass">ClvBass</string>
    <string name="xgnv_tekno_bass">TeknoBa</string>
    <string name="xgnv_oscar">Oscar</string>
    <string name="xgnv_sqr_bass">SqrBass</string>
    <string name="xgnv_rubber_bass">RubberBa</string>
    <string name="xgnv_hammer">Hammer</string>
    <string name="xgnv_syn_bass2">SynBass2</string>
    <string name="xgnv_mello_sb1">MelloSB1</string>
    <string name="xgnv_seq_bass">SeqBass</string>
    <string name="xgnv_clk_syn_bass">ClkSynB</string>
    <string name="xgnv_syn_bass2_dk">SynBa2Dk</string>
    <string name="xgnv_smooth_bass2">SmthBa2</string>
    <string name="xgnv_modular_bass">ModulrBa</string>
    <string name="xgnv_dx_bass">DXBass</string>
    <string name="xgnv_x_wire_bass">XWireBa</string>
    <string name="xgnv_violin">Violin</string>
    <string name="xgnv_slow_violin">SlowVln</string>
    <string name="xgnv_viola">Viola</string>
    <string name="xgnv_cello">Cello</string>
    <string name="xgnv_contrabass">Contrabs</string>
    <string name="xgnv_trem_str">TremStr</string>
    <string name="xgnv_slow_trem_str">SlowTrStr</string>
    <string name="xgnv_susp_str">SuspStr</string>
    <string name="xgnv_pizz_str">PizzStr</string>
    <string name="xgdp_key_assign">Key Assign</string>
    <string name="xgdp_rcv_noteoff">Rcv Note Off</string>
    <string name="xgdp_rcv_noteon">Rcv Note On</string>
    <string name="qs300_preset_name">Preset Name</string>
    <string name="save_setup">Save Setup</string>
    <string name="connection_status">Connection Status</string>
    <string name="voice_name">Voice Name</string>
    <string name="part_receiving">Rcv. Ch.</string>
    <string name="level">Level</string>
    <string name="pan">Pan</string>
    <string name="reverb">Reverb</string>
    <string name="chorus">Chorus</string>
    <string name="fxpc_rev_ret">Reverb Return</string>
    <string name="fxpc_rev_pan">Reverb Pan</string>
    <string name="fxpc_chor_ret">Chorus Return</string>
    <string name="fxpc_chor_pan">Chorus Pan</string>
    <string name="fxpc_chor_send_rev">Send To Reverb</string>
    <string name="fxpc_vari_ret">Variation Return</string>
    <string name="fxpc_vari_pan">Variation Pan</string>
    <string name="fxpc_vari_send_chor">Send To Chorus</string>
    <string name="fxpc_vari_send_rev">Send To Reverb</string>
    <string name="sys_master_tune">Master Tuning</string>
    <string name="sys_master_vol">Master Volume</string>
    <string name="sys_transpose">Transpose</string>
    <string name="sys_reset_drum">Reset All Drums</string>
    <string name="sys_reset_params">Reset All Voice Parameters</string>
    <string name="sys_init">Send Default Setup</string>
    <string name="sys_all_sounds_off">All Sounds/Notes Off</string>
    <string name="qs300_name_change">Change Preset Names</string>
</resources>