<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/send_default"
        android:title="@string/sys_init"
        app:showAsAction="never" />
    <item
        android:id="@+id/panic"
        android:icon="@drawable/baseline_music_off_24"
        android:title="@string/sys_all_sounds_off"
        app:showAsAction="always" />
    <item
        android:id="@+id/save_setup"
        android:icon="@drawable/baseline_save_24"
        android:title="@string/save_setup"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/open_setup"
        android:icon="@drawable/baseline_folder_24"
        android:title="@string/open_existing"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/connect_status"
        android:icon="@drawable/baseline_cable_24"
        android:title="@string/connection_status"
        app:showAsAction="ifRoom" />
</menu>