<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:viewBindingIgnore="true">

        <com.example.xgbuddy.ui.custom.SliderControlView
            android:id="@+id/scvMasterVolume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:pcId="@string/sys_master_vol" />

        <com.example.xgbuddy.ui.custom.SliderControlView
            android:id="@+id/scvMasterTune"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:pcId="@string/sys_master_tune" />

        <com.example.xgbuddy.ui.custom.SliderControlView
            android:id="@+id/scvTranspose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:pcId="@string/sys_transpose" />

        <Button
            android:id="@+id/bResetDrum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:text="@string/sys_reset_drum" />

        <Button
            android:id="@+id/bResetParams"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:text="@string/sys_reset_params" />

        <Button
            android:id="@+id/bInitSetup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:text="@string/sys_init" />

        <Button
            android:id="@+id/bPanic"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:text="@string/sys_all_sounds_off" />
    </LinearLayout>
</ScrollView>
