<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:viewBindingIgnore="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.example.xgbuddy.ui.custom.ControlViewGroup
                android:id="@+id/cvgDrumParam"
                style="@style/ControlViewGroupElement"
                android:entries="@array/xg_drum_param"
                app:cvgLabel="Voice Parameters" />

            <com.example.xgbuddy.ui.custom.ControlViewGroup
                android:id="@+id/cvgDrumParam2"
                style="@style/ControlViewGroupElement"
                app:cvgLabel="Note Parameters">

                <LinearLayout
                    android:id="@+id/drumParam2Extras"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.example.xgbuddy.ui.custom.SwitchControlView
                        android:id="@+id/cvDPKeyAssign"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:pcId="@string/xgdp_key_assign" />

                    <com.example.xgbuddy.ui.custom.SwitchControlView
                        android:id="@+id/cvDPNoteOff"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:pcId="@string/xgdp_rcv_noteoff" />

                    <com.example.xgbuddy.ui.custom.SwitchControlView
                        android:id="@+id/cvDPNoteOn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:pcId="@string/xgdp_rcv_noteon" />
                </LinearLayout>
            </com.example.xgbuddy.ui.custom.ControlViewGroup>
        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>