<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/container_bg_shape">

    <Spinner
        android:id="@+id/spChorusType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spChorusType">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.example.xgbuddy.ui.custom.ControlViewGroup
                android:id="@+id/cvgChorus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:entries="@array/fx_chor_params"
                app:cvgLabel="Chorus">

                <LinearLayout
                    android:id="@+id/llChorusExtras"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.example.xgbuddy.ui.custom.SliderControlView
                        android:id="@+id/cvChorusReturn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:pcId="@string/fxpc_chor_ret" />

                    <com.example.xgbuddy.ui.custom.SliderControlView
                        android:id="@+id/cvChorusPan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:pcId="@string/fxpc_chor_pan" />

                    <com.example.xgbuddy.ui.custom.SliderControlView
                        android:id="@+id/cvChorusToRev"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:pcId="@string/fxpc_chor_send_rev" />
                </LinearLayout>

            </com.example.xgbuddy.ui.custom.ControlViewGroup>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>