<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/container_bg_shape">

    <Spinner
        android:id="@+id/spVariType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spVariPart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/vari_part_entries"
        android:spinnerMode="dialog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spVariType" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/swVariConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/spVariPart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/spVariType" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spVariPart">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.example.xgbuddy.ui.custom.ControlViewGroup
                android:id="@+id/cvgVari"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:entries="@array/fx_vari_params"
                app:cvgLabel="Variation">

                <LinearLayout
                    android:id="@+id/llVariExtras"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.example.xgbuddy.ui.custom.SliderControlView
                        android:id="@+id/cvVariReturn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:pcId="@string/fxpc_vari_ret" />

                    <com.example.xgbuddy.ui.custom.SliderControlView
                        android:id="@+id/cvVariPan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:pcId="@string/fxpc_vari_pan" />

                    <com.example.xgbuddy.ui.custom.SliderControlView
                        android:id="@+id/cvVariToRev"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:pcId="@string/fxpc_vari_send_rev" />

                    <com.example.xgbuddy.ui.custom.SliderControlView
                        android:id="@+id/cvVariToCho"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:pcId="@string/fxpc_vari_send_chor" />
                </LinearLayout>

            </com.example.xgbuddy.ui.custom.ControlViewGroup>

            <com.example.xgbuddy.ui.custom.ControlViewGroup
                android:id="@+id/cvgVariCtrl"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:entries="@array/fx_vari_ctrl"
                app:cvgLabel="Ctrl Depth" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>